<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_shape"
        >

    <LinearLayout
            android:id="@+id/business_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical"
            app:layout_collapseMode="parallax"
            android:background="@drawable/background_shape">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_constarint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_shape"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/business_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical"

                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    <TextView
                            android:id="@+id/business_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/business_string_name"
                            android:textColor="#000"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                            android:id="@+id/business_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/business_detail_name"
                            android:textColor="#000"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="@id/business_name" />

                </LinearLayout>

                <ImageView
                        android:id="@+id/business_avator"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="0dp"
                        android:src="@drawable/kfc"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                    android:id="@+id/bulletin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/bulletin_name"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/business_layout" />

            <LinearLayout
                    android:id="@+id/coupon"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/bulletin"
                >

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="31dp"
                        android:textColor="#4D3312"
                        android:text="￥"
                        android:gravity="center"
                         android:background="@drawable/brown_background_shape"
                        />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="31dp"
                        android:textColor="#4D3312"
                        android:text="8"

                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:background="@drawable/brown_background_shape"
                        />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="31dp"
                        android:textColor="#4D3312"
                        android:gravity="center_vertical"
                        android:text="无门槛"
                        android:drawableLeft="@mipmap/huangguan"
                        android:paddingRight="5dp"
                        android:background="@drawable/brown_background_shape"
                        />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="31dp"
                        android:textColor="#4D3312"
                        android:gravity="center"
                        android:layout_marginLeft="1dp"
                        android:paddingLeft="2dp"
                        android:paddingRight="2dp"
                        android:text="领"
                        android:background="@drawable/brown_background_shape"
                        />
            </LinearLayout>


            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/coupon">

                <LinearLayout
                        android:id="@+id/reduce"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="38减20"
                            android:paddingLeft="4dp"
                            android:paddingRight="4dp"
                            android:textColor="@color/themeorange"
                            android:background="@drawable/orange_border_shape" />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="58减30"
                            android:paddingLeft="4dp"
                            android:paddingRight="4dp"
                            android:textColor="@color/themeorange"
                            android:layout_marginLeft="5dp"
                            android:background="@drawable/orange_border_shape" />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="88减40"
                            android:paddingLeft="4dp"
                            android:paddingRight="4dp"
                            android:textColor="@color/themeorange"
                            android:layout_marginLeft="5dp"
                            android:background="@drawable/orange_border_shape" />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="128减50"
                            android:paddingLeft="4dp"
                            android:paddingRight="4dp"
                            android:textColor="@color/themeorange"
                            android:layout_marginLeft="5dp"
                            android:background="@drawable/orange_border_shape" />
                </LinearLayout>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:drawableRight="@mipmap/xiala"
                        android:drawablePadding="3dp"
                        android:text="6个优惠" />

            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--    上方介绍栏结束 -->

        <fragment
                android:id="@+id/vip_fragment"
                android:name="cn.momoshenchi.takeout.fragment.VipFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

    </LinearLayout>
</LinearLayout>